Updated notebook to Explore Langchain chaining concepts with Gemini

--- a/Chains_end_to_end.ipynb
+++ b/Chains_end_to_end.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "# Set your Gemini API key\n",
     "# os.environ[\"GOOGLE_API_KEY\"] = api_key\n",
-    "gemini_api_key = \"AIzaSyDYrLh_w_XsT3fQlfKWkzNYbdB6SMjkpTA\"\n",
+    "gemini_api_key = \"Use-your-api-key\"\n",
     "\n",
     "# Create Gemini LLM\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash\", api_key=gemini_api_key)\n",
@@ -105,7 +105,7 @@
     "\n",
     "# Set your Gemini API key\n",
     "# os.environ[\"GOOGLE_API_KEY\"] = api_key\n",
-    "gemini_api_key = \"AIzaSyDYrLh_w_XsT3fQlfKWkzNYbdB6SMjkpTA\"\n",
+    "gemini_api_key = \"Use-your-api-key\"\n",
     "\n",
     "# Create Gemini LLM\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash\", api_key=gemini_api_key)\n",
@@ -282,7 +282,7 @@
     "\n",
     "# Set your API key\n",
     "# os.environ[\"GOOGLE_API_KEY\"] = api_key\n",
-    "gemini_api_key = \"AIzaSyDYrLh_w_XsT3fQlfKWkzNYbdB6SMjkpTA\"\n",
+    "gemini_api_key = \"Use-your-api-key\"\n",
     "\n",
     "# Define LLM\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash\", api_key=gemini_api_key)\n",
@@ -358,7 +358,7 @@
     "from langchain.memory import ConversationBufferMemory\n",
     "\n",
     "# Initialize Gemini model (You need your API key set in env variable GOOGLE_API_KEY)\n",
-    "gemini_api_key = \"AIzaSyDYrLh_w_XsT3fQlfKWkzNYbdB6SMjkpTA\"\n",
+    "gemini_api_key = \"Use-your-api-key\"\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", api_key=gemini_api_key)\n",
     "\n",
     "# Setup memory\n",
@@ -657,7 +657,7 @@
     "from langchain.chains import SequentialChain, LLMChain\n",
     "from langchain.prompts import PromptTemplate\n",
     "\n",
-    "gemini_api_key = \"AIzaSyDYrLh_w_XsT3fQlfKWkzNYbdB6SMjkpTA\"\n",
+    "gemini_api_key = \"Use-your-api-key\"\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", api_key = gemini_api_key, temperature=0.7, top_k=50)\n",
     "\n",
     "# Step 1: Topic → Title\n",
@@ -812,7 +812,7 @@
     "from langchain_core.runnables import RunnableMap\n",
     "\n",
     "# Step 1: Setup LLM\n",
-    "gemini_api_key = \"AIzaSyDYrLh_w_XsT3fQlfKWkzNYbdB6SMjkpTA\"\n",
+    "gemini_api_key = \"Use-your-api-key\"\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.5-pro\", temperature=0.7, api_key=gemini_api_key)\n",
     "\n",
     "# Step 2: Prompts\n",
