Updated notebook to Explore Langchain memory modules with Gemini integration

--- a/Langchain_memory.ipynb
+++ b/Langchain_memory.ipynb
@@ -100,7 +100,7 @@
     "from langchain.memory import ConversationBufferMemory\n",
     "\n",
     "# Initialize Gemini model (You need your API key set in env variable GOOGLE_API_KEY)\n",
-    "gemini_api_key = \"AIzaSyDYrLh_w_XsT3fQlfKWkzNYbdB6SMjkpTA\"\n",
+    "gemini_api_key = \"Use-your-api-key\"\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", api_key=gemini_api_key)\n",
     "\n",
     "# Setup memory\n",
@@ -236,7 +236,7 @@
     "\n",
     "# os.environ[\"GOOGLE_API_KEY\"] = api_key\n",
     "# Initialize Gemini model (You need your API key set in env variable GOOGLE_API_KEY)\n",
-    "gemini_api_key = \"AIzaSyDYrLh_w_XsT3fQlfKWkzNYbdB6SMjkpTA\"\n",
+    "gemini_api_key = \"Use-your-api-key\"\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash\", api_key=gemini_api_key)\n",
     "\n",
     "# Run conversation\n",
@@ -322,7 +322,7 @@
     "from langchain.memory import ConversationBufferMemory\n",
     "\n",
     "# Initialize Gemini model (You need your API key set in env variable GOOGLE_API_KEY)\n",
-    "gemini_api_key = \"AIzaSyDYrLh_w_XsT3fQlfKWkzNYbdB6SMjkpTA\"\n",
+    "gemini_api_key = \"Use-your-api-key\"\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", api_key=gemini_api_key)\n",
     "\n",
     "# Setup memory\n",
@@ -521,7 +521,7 @@
     "from langchain.memory import ConversationSummaryMemory\n",
     "\n",
     "# os.environ[\"GOOGLE_API_KEY\"] = api_key\n",
-    "gemini_api_key = \"AIzaSyDYrLh_w_XsT3fQlfKWkzNYbdB6SMjkpTA\"\n",
+    "gemini_api_key = \"Use-your-api-key\"\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", api_key=gemini_api_key)\n",
     "\n",
     "summary_memory = ConversationSummaryMemory(llm=llm)\n",
